--- a/playground/anthony/css/style.css
+++ b/playground/anthony/css/style.css
@@ -23,6 +23,11 @@ h1 {
     stroke-dasharray: 2;
 }
 
+.policy-text {
+    font-size: 10px;
+    text-align: center;
+}
+
 .circle {
     fill: #288BE4;
 }
